--- a/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_greh.ltx
+++ b/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_greh.ltx
@@ -1,38 +1,56 @@
+; Actually mostly okay, just needing some fixes. - [Ted]
 
-[greh_novice]:stalker_novice
+[greh]:stalker
+
+[greh_novice]:greh
 primary = greh_novice_primary  
-secondary = greh_novice_secondary  
+secondary = greh_novice_secondary 
+extra = extras_novice 
 
-[greh_trainee]:greh_novice
+[greh_trainee]:greh
 primary = greh_trainee_primary  
 secondary = greh_trainee_secondary
+extra = extras_trainee
 
-[greh_experienced]:stalker_experienced
+[greh_experienced]:greh
 primary = greh_experienced_primary  
 secondary = greh_experienced_secondary
+extra = extras_experienced
 
-[greh_professional]:greh_experienced
+[greh_professional]:greh
 primary = greh_professional_primary
 extra = extras_veteran
+extra = extras_professional
 
-[greh_veteran]:greh_professional
+[greh_veteran]:greh
 primary = greh_veteran_primary
 secondary = greh_veteran_secondary
-ammo_1  =  ammo_primary_veteran
-ammo_2  =  ammo_secondary_veteran
+extra = extras_veteran
+;ammo_1  =  ammo_primary_veteran
+;ammo_2  =  ammo_secondary_veteran
 
-[greh_expert]:greh_veteran
+[greh_expert]:greh
+primary = greh_expert_primary
+secondary = greh_expert_secondary
+extra = extras_expert
 
-[greh_master]:greh_expert
+[greh_master]:greh
 primary = greh_master_primary
 secondary = greh_master_secondary
+extra = extras_master
 
-[greh_legend]:greh_master
+[greh_legend]:greh
 primary = greh_legend_primary
 secondary = greh_legend_secondary
+extra = extras_legend
 
 ;----------------------------------------------------
+
 [greh_novice_primary]
+
+wpn_pp2000:r:0
+wpn_pp2000:r:0
+
 wpn_ak74u_n1:r:6
 wpn_ak74u_n1:0:6
 wpn_ak74m_n:r:6
@@ -42,445 +60,300 @@ wpn_ak74_n:0:6
 
 wpn_sks_b:r:3
 wpn_akm_bas:r:3
-wpn_akm_bas:r:3
-wpn_akm_bas:r:3
-wpn_akm_bas:r:3
-wpn_akm_bas:r:3
-wpn_akm_bas:r:3
-wpn_akm_bas:r:3
-wpn_rpk:r:3
-wpn_rpk:r:3
-wpn_rpk:r:3
 wpn_rpk:r:3
 
 wpn_groza:r:3
-wpn_groza:r:3
-wpn_9a91:r:3
-wpn_9a91:r:3
 wpn_9a91:r:3
 
 wpn_svds:3
-wpn_sv98:r:3
-
-wpn_saiga12s_m2:r:6
-
-wpn_toz34_mark4_23:0:3
-wpn_toz34_mark4_23:0:3
-
-[greh_novice_secondary]
-wpn_mp412:0:0
-wpn_mp443:0:0
-wpn_aps:0:0
-wpn_oc33:0:0
-wpn_pl15:0:0
-wpn_gsh18:0:0
-wpn_gsh18:0:0
-wpn_pb_custom:0
-wpn_pb_custom:0:0
-wpn_pm_custom:0
-wpn_pm_custom:0:0
-wpn_pm_custom:0:0
-wpn_tt33_modern:0:0
-wpn_tt33_modern:0:0
-wpn_colt1911:0:0
-wpn_fn57:r:0
-
-
-[greh_trainee_primary]
-wpn_val:0:3
-wpn_val:0:3
-wpn_val:0:3
-wpn_groza:r:3
-wpn_groza:r:3
-wpn_9a91:r:3
-wpn_9a91:r:3
-wpn_9a91:r:3
-
-wpn_saiga12s_m2:r:6
-wpn_ks23:r:3
-wpn_ks23:r:3
-wpn_toz34_mark4_23:0:3
-
-wpn_ash12:4:3
-
-wpn_rpk:0:3
-wpn_rpk:0:3
-
-wpn_pkp_siber:0:0
-wpn_pkp_siber:0:0
-
-wpn_pp2000:r:0
-
-wpn_abakan_n:0:6
-wpn_abakan_n:0:6:50
-wpn_ak74u_n1:0:6
-wpn_ak74m_n:0:6
-wpn_ak74_n:0:6
-
-wpn_akm_bas:r:3
-wpn_akm_bas:r:3
-wpn_akm_bas:r:3
-wpn_akm_bas:r:3
-wpn_akm_bas:r:3
-wpn_akm_bas:r:3
-wpn_rpk:r:3
-wpn_rpk:r:3
-wpn_rpk:r:3
-
-wpn_svds:3
-wpn_svds:3
-wpn_sv98:r:3
-wpn_sv98:r:3
-wpn_vihr:r:3
-
-
-[greh_trainee_secondary]
-wpn_mp412:0:0
-wpn_mp443:0:0
-wpn_aps:0:0
-wpn_oc33:0:0
-wpn_pl15:0:0
-wpn_gsh18:0:0
-wpn_gsh18:0:0
-wpn_pb_custom:0
-wpn_pb_custom:0:0
-wpn_pm_custom:0
-wpn_pm_custom:0:0
-wpn_pm_custom:0:0
-wpn_tt33_modern:0:0
-wpn_tt33_modern:0:0
-wpn_colt1911:0:0
-wpn_fn57:r:0
-
-[greh_experienced_primary]
-wpn_val:0:3
-wpn_val:0:3
-wpn_val:0:3
-wpn_groza:r:3
-wpn_groza:r:3
-wpn_9a91:r:3
-wpn_9a91:r:3
-wpn_9a91:r:3
-wpn_vihr:r:3
-wpn_vihr:r:3
-
-wpn_saiga12s_m2:r:6
-wpn_ks23:r:3
-wpn_ks23:r:3
-
-wpn_ash12:4:3
-
-wpn_rpk:0:3
-wpn_rpk:0:3
-wpn_rpk:0:3
-
-wpn_pkm_siber:0:0
-
-wpn_pkp_siber:0:0
-
-wpn_pp2000:r:0
-
-wpn_abakan_n:r:6
-wpn_abakan_n:r:6:50
-wpn_ak74u_n1:0:6
-wpn_ak74m_n:0:6
-wpn_ak74_n:0:6
-
-wpn_akm_bas:r:3
-wpn_akm_bas:r:3
-wpn_akm_bas:r:3
-wpn_akm_bas:r:3
-wpn_akm_bas:r:3
-wpn_akm_bas:r:3
-wpn_rpk:r:3
-wpn_rpk:r:3
-wpn_rpk:r:3
-
-wpn_svds:r:3
-wpn_svds:r:3
-wpn_svds:3
-wpn_svds:3
-wpn_sv98:r:3
-wpn_sv98:r:3
-
-[greh_experienced_secondary]
-wpn_mp412:0:0
-wpn_mp443:0:0
-wpn_aps:0:0
-wpn_oc33:0:0
-wpn_pl15:0:0
-wpn_gsh18:0:0
-wpn_gsh18:0:0
-wpn_pb_custom:0
-wpn_pb_custom:0:0
-wpn_pm_custom:0
-wpn_pm_custom:0:0
-wpn_pm_custom:0:0
-wpn_tt33_modern:0:0
-wpn_tt33_modern:0:0
-wpn_colt1911:0:0
-wpn_fn57:r:0
-
-[greh_professional_primary]
-wpn_val:0:3
-wpn_val:0:3
-wpn_val:0:3
-wpn_groza:r:3
-wpn_groza:r:3
-wpn_9a91:r:3
-wpn_9a91:r:3
-wpn_9a91:r:3
-wpn_vihr:r:3
-
-wpn_saiga12s_m2:r:6
-wpn_ks23:r:3
-wpn_ks23:r:3
-
-wpn_ash12:4:3
-wpn_ash12:4:3
-
-wpn_rpk:0:3
-wpn_rpk:0:3
-wpn_rpk:0:3
-
-wpn_pkm_siber:0:0
-
-wpn_pkp_siber:r:0
-
-wpn_pp2000:r:0
-
-wpn_abakan_n:r:6
-wpn_abakan_n:r:6:50
-wpn_ak74u_n1:0:6
-wpn_ak74m_n:0:6
-wpn_ak74_n:0:6
-
-wpn_akm_bas:r:3
-wpn_akm_bas:r:3
-wpn_akm_bas:r:3
-wpn_akm_bas:r:3
-wpn_akm_bas:r:3
-wpn_akm_bas:r:3
-wpn_rpk:r:3
-wpn_rpk:r:3
-wpn_rpk:r:3
-
-wpn_svds:r:3
-wpn_svds:r:3
-wpn_svds:3
-wpn_svds:3
-wpn_sv98:r:3
 wpn_sv98:r:3
 
 wpn_wincheaster1300:0:6
 wpn_wincheaster1300:0:6
 wpn_protecta:0:6
 wpn_protecta_aim:0:6
+wpn_saiga12s_m2:r:6
+wpn_toz34_mark4_23:0:3
+wpn_toz34_mark4_23:0:3
 
-wpn_remington700_magpul_pro:r:3
+[greh_novice_secondary]
 
-[greh_veteran_primary]
-wpn_val:0:3
-wpn_val:0:3
-wpn_val:0:3
-wpn_groza:r:3
-wpn_groza:r:3
-wpn_9a91:r:3
-wpn_9a91:r:3
-wpn_9a91:r:3
-wpn_vihr:r:3
-wpn_vihr:r:3
+wpn_aps:0:0
+wpn_oc33:0:0
+wpn_pb_custom:0
+wpn_pb_custom:0:0
+wpn_pm_custom:0
+wpn_pm_custom:0:0
+wpn_pm_custom:0:0
+wpn_tt33_modern:0:0
+wpn_tt33_modern:0:0
 
-wpn_ash12:4:3
-wpn_ash12:4:3
-wpn_ash12:4:3
-wpn_ash12:4:3
+[greh_trainee_primary]
 
-wpn_rpk:0:3
-wpn_rpk:0:3
-wpn_rpk:0:3
+wpn_pp2000:r:0
+wpn_pp2000:r:0
 
-wpn_pkm_siber:0:0
-
-wpn_pkp_siber:r:0
-
-wpn_ks23:r:3
-wpn_ks23:r:3
-
-wpn_abakan_n:r:6
-wpn_abakan_n:r:6
-wpn_abakan_n:r:6:50
-wpn_abakan_n:r:6:50
 wpn_ak74u_n1:r:6
 wpn_ak74u_n1:0:6
 wpn_ak74m_n:r:6
 wpn_ak74m_n:0:6
 wpn_ak74_n:r:6
 wpn_ak74_n:0:6
+wpn_abakan_n:0:6:50
 
 wpn_sks_b:r:3
 wpn_akm_bas:r:3
-wpn_akm_bas:r:3
-wpn_akm_bas:r:3
-wpn_akm_bas:r:3
-wpn_rpk:r:3
-wpn_rpk:r:3
-wpn_rpk:r:3
-wpn_rpk:r:3
 wpn_rpk:r:3
 
-wpn_svds:r:3
-wpn_svds:r:3
-wpn_svds:r:3
+wpn_groza:r:3
+wpn_9a91:r:3
+
 wpn_svds:3
 wpn_sv98:r:3
 
-wpn_remington700_magpul_pro:r:3
-wpn_remington700_magpul_pro:r:3
+wpn_wincheaster1300:0:6
+wpn_wincheaster1300:0:6
+wpn_protecta:0:6
+wpn_protecta_aim:0:6
+wpn_saiga12s_m2:r:6
+wpn_toz34_mark4_23:0:3
+wpn_toz34_mark4_23:0:3
+
+[greh_trainee_secondary]
+
+wpn_aps:0:0
+wpn_oc33:0:0
+wpn_pb_custom:0
+wpn_pb_custom:0:0
+wpn_pm_custom:0
+wpn_pm_custom:0:0
+wpn_pm_custom:0:0
+wpn_tt33_modern:0:0
+wpn_tt33_modern:0:0
+
+[greh_experienced_primary]
+
+wpn_pp2000:r:0
+wpn_pp2000:r:0
+
+wpn_sks_b:r:3
+wpn_akm_bas:r:3
+wpn_ak74u_n1:r:6
+wpn_ak74u_n1:0:6
+wpn_ak74m_n:r:6
+wpn_ak74m_n:0:6
+wpn_ak74_n:r:6
+wpn_ak74_n:0:6
+wpn_abakan_n:0:6:50
+
+wpn_rpk:r:3
+wpn_pkm_siber:0:0
+wpn_pkp_siber:0:0
+
+wpn_groza:r:3
+wpn_9a91:r:3
+wpn_val:0:3
+
+wpn_svds:3
+wpn_sv98:r:3
+
+wpn_wincheaster1300:0:6
+wpn_wincheaster1300:0:6
+wpn_protecta:0:6
+wpn_protecta_aim:0:6
+wpn_saiga12s_m2:r:6
+wpn_ks23:r:3
+wpn_toz34_mark4_23:0:3
+wpn_toz34_mark4_23:0:3
+
+[greh_experienced_secondary]
+
+wpn_aps:0:0
+wpn_oc33:0:0
+wpn_pb_custom:0:0
+wpn_pm_custom:0:0
+wpn_pm_custom:0:0
+wpn_tt33_modern:0:0
+wpn_sr1m:0:0
+
+[greh_professional_primary]
+
+wpn_pp2000:r:0
+wpn_pp2000:r:0
+
+wpn_sks_b:r:3
+wpn_akm_bas:r:3
+wpn_ak74u_n1:r:6
+wpn_ak74u_n1:0:6
+wpn_ak74m_n:r:6
+wpn_ak74m_n:0:6
+wpn_ak74_n:r:6
+wpn_ak74_n:0:6
+wpn_abakan_n:0:6:50
+
+wpn_rpk:r:3
+wpn_pkm_siber:0:0
+wpn_pkp_siber:0:0
+
+wpn_groza:r:3
+wpn_9a91:r:3
+wpn_val:0:3
+
+wpn_svds:3
+wpn_sv98:r:3
+
+wpn_saiga12s_m2:r:6
+wpn_ks23:r:3
+
+wpn_toz34_mark4_23:0:3
+wpn_toz34_mark4_23:0:3
+
+[greh_professional_secondary]
+
+wpn_aps:0:0
+wpn_oc33:0:0
+wpn_pb_custom:0:0
+wpn_pm_custom:0:0
+wpn_tt33_modern:0:0
+wpn_sr1m:0:0
+wpn_sr1m:0:0
+
+[greh_veteran_primary]
+
+wpn_pp2000:r:0
+wpn_pp2000:r:0
+
+wpn_sks_b:r:3
+wpn_akm_bas:r:3
+wpn_ak74u_n1:r:6
+wpn_ak74u_n1:0:6
+wpn_ak74m_n:r:6
+wpn_ak74m_n:0:6
+wpn_ak74_n:r:6
+wpn_ak74_n:0:6
+wpn_abakan_n:0:6:50
+
+wpn_rpk:r:3
+wpn_pkm_siber:0:0
+wpn_pkp_siber:0:0
+
+wpn_groza:r:3
 wpn_groza_nimble:r:6:30
+wpn_9a91:r:3
+wpn_val:0:3
+
+wpn_remington700_magpul_pro:r:3
+wpn_remington700_magpul_pro:r:3
+wpn_svds:3
+
+wpn_saiga12s_m2:r:6
+wpn_ks23:r:3
+
+wpn_toz34_mark4_23:0:3
+wpn_toz34_mark4_23:0:3
 
 [greh_veteran_secondary]
-wpn_mp412:0:0
-wpn_mp443:0:0
+
 wpn_aps:0:0
 wpn_oc33:0:0
-wpn_pl15:0:0
-wpn_gsh18:0:0
-wpn_gsh18:0:0
-wpn_pb_custom:0
 wpn_pb_custom:0:0
-wpn_pm_custom:0
-wpn_pm_custom:0:0
 wpn_pm_custom:0:0
 wpn_tt33_modern:0:0
-wpn_tt33_modern:0:0
-wpn_colt1911:0:0
-wpn_fn57:r:0
+wpn_gsh18:0:0
+wpn_gsh18:0:0
+wpn_sr1m:0:0
+wpn_sr1m:0:0
 
 [greh_master_primary]
-wpn_l96a1m:0:0
-wpn_l96a1m:0:0
-wpn_remington700_lapua700:0:0:55
+
+wpn_ak104_alfa:r:3
+wpn_ak104_alfa:r:3
+wpn_ak12_m1:4:6:35
+wpn_ak12_m1:4:6:35
+wpn_ak74m_n:r:6
+wpn_ak74m_n:0:6
+wpn_ak74_n:r:6
+wpn_ak74_n:0:6
+wpn_abakan_n:0:6:50
+
+wpn_rpk:r:3
 wpn_pkm_siber:0:0
+wpn_pkp_siber:0:0
 
-wpn_pkp_siber:r:0
+wpn_groza:r:3
+wpn_groza:r:3
+wpn_groza_nimble:r:6:30
+wpn_ash12:4:3
+wpn_9a91:r:3
+wpn_val:0:3
 
-wpn_akm_alfa:4:6:35
-wpn_ak12_m1:4:6:35
-wpn_ak12_m1:4:6:35
-
-wpn_vihr:r:3
-wpn_vihr:r:3
-
-wpn_m249:r:6
-
-wpn_rpk:0:3
-wpn_rpk:0:3
-wpn_rpk:0:3
-
-wpn_abakan_n:r:6
-wpn_abakan_n:r:6
-wpn_abakan_n:r:6:50
-wpn_abakan_n:r:6:50
-
-wpn_akm_bas:r:3
-wpn_akm_bas:r:3
-wpn_rpk:r:3
-wpn_rpk:r:3
-wpn_rpk:r:3
-wpn_rpk:r:3
-wpn_rpk:r:3
-
-wpn_svds:r:3
-wpn_svds:r:3
-wpn_svds:r:3
-wpn_svds:r:3
+wpn_remington700_magpul_pro:r:3
+wpn_remington700_magpul_pro:r:3
+wpn_svds:3
 wpn_svds_pmc:4:3:25
-wpn_svds4:3:40
 
-wpn_remington700_magpul_pro:r:3
-wpn_remington700_magpul_pro:r:3
-wpn_ash12:4:3
-wpn_ash12:4:3
-wpn_groza_nimble:r:6
+wpn_saiga12s_m2:r:6
+wpn_ks23:r:3
+
+wpn_toz34_mark4_23:0:3
+wpn_toz34_mark4_23:0:3
 
 [greh_master_secondary]
-wpn_mp412:0:0
-wpn_mp443:0:0
+
 wpn_aps:0:0
 wpn_oc33:0:0
-wpn_pl15:0:0
-wpn_gsh18:0:0
-wpn_gsh18:0:0
-wpn_pb_custom:0
 wpn_pb_custom:0:0
-wpn_pm_custom:0
-wpn_pm_custom:0:0
 wpn_pm_custom:0:0
 wpn_tt33_modern:0:0
-wpn_tt33_modern:0:0
-wpn_colt1911:0:0
-wpn_fn57:r:0
-
+wpn_gsh18:0:0
+wpn_gsh18:0:0
+wpn_sr1m:0:0
+wpn_sr1m:0:0
 
 [greh_legend_primary]
-wpn_saiga12s_isg:r:6:35
-wpn_saiga12s_isg:4:6:70
-wpn_akm_alfa:4:6:55
-wpn_ak12_m1:4:6:55
-wpn_ak12_m1:4:6:55
 
-wpn_l96a1m:0:0
-wpn_remington700_lapua700:0:0:55
-wpn_vihr:r:3
-wpn_vihr:r:3
-wpn_vihr:r:3
+wpn_ak104_alfa:r:3
+wpn_ak104_alfa:r:3
+wpn_ak12_m1:4:6:35
+wpn_ak12_m1:4:6:35
+wpn_ak74m_n:r:6
+wpn_ak74m_n:0:6
+wpn_abakan_n:r:6:50
+wpn_abakan_n:0:6:50
+wpn_abakan_n:0:6:50
 
-wpn_m249:r:6
-wpn_m249:r:6
-wpn_m249:r:6
-
-wpn_rpk:0:3
-wpn_rpk:0:3
-wpn_rpk:0:3
-
+wpn_rpk:r:3
 wpn_pkm_siber:0:0
+wpn_pkm_siber:0:0
+wpn_pkm_siber:0:0
+wpn_pkp_siber:0:0
+wpn_pkp_siber:0:0
+wpn_pkp_siber:0:0
 
-wpn_pkp_siber:r:0
-
-wpn_abakan_n:r:6
-wpn_abakan_n:r:6
-wpn_abakan_n:r:6:50
-wpn_abakan_n:r:6:50
-
-wpn_akm_bas:r:3
-wpn_akm_bas:r:3
-wpn_rpk:r:3
-wpn_rpk:r:3
-wpn_rpk:r:3
-wpn_rpk:r:3
-wpn_rpk:r:3
-
-wpn_svds_pmc:4:6:55
-
-wpn_remington700_magpul_pro:r:3:55
+wpn_groza:r:3
+wpn_groza:r:3
+wpn_groza_nimble:r:6:30
 wpn_ash12:4:3
-wpn_ash12:4:3
+wpn_val:r:3
+wpn_val:0:3
+
+wpn_remington700_magpul_pro:r:3
+wpn_remington700_magpul_pro:r:3
+wpn_svds_pmc:4:3:25
+wpn_svds_pmc:4:3:25
+wpn_svds_pmc:4:3:25
+
+wpn_saiga12s_isg:r:6:35
+wpn_saiga12s_isg:r:6:35
+wpn_toz34_mark4_23:0:3
+wpn_toz34_mark4_23:0:3
+wpn_ks23:r:3
 
 [greh_legend_secondary]
-wpn_mp412:0:0
-wpn_mp443:0:0
+
 wpn_aps:0:0
 wpn_oc33:0:0
-wpn_pl15:0:0
 wpn_gsh18:0:0
 wpn_gsh18:0:0
-wpn_pb_custom:0
-wpn_pb_custom:0:0
-wpn_pm_custom:0
-wpn_pm_custom:0:0
-wpn_pm_custom:0:0
-wpn_tt33_modern:0:0
-wpn_tt33_modern:0:0
-wpn_colt1911:0:0
-wpn_fn57:r:0
+wpn_sr1m:0:0
+wpn_sr1m:0:0
